force-app/main/default/objects/Coupon__c/Coupon__c.object-meta.xml
<CustomObject>
    <label>Coupon</label>
    <nameField>
        <displayFormat>CPN-{00000}</displayFormat>
        <label>Coupon Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coupons</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>