force-app/main/default/objects/Coupon__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To which Applicant has the Coupon Code been assigned to. This will be set for Single-use Coupon Code Type.</description>
    <label>Applicant</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Applicant</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Coupons</relationshipLabel>
    <relationshipName>Coupons</relationshipName>
    <type>Lookup</type>
</CustomField>