force-app/main/default/objects/Coupon__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Campaign that this Coupon Code is tagged with. This will be set for Multi-use Coupon Code Type.</description>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Coupons</relationshipLabel>
    <relationshipName>Coupons</relationshipName>
    <type>Lookup</type>
</CustomField>