force-app/main/default/objects/Coupon__c/fields/Current_Use_Count__c.field-meta.xml
<CustomField>
    <fullName>Current_Use_Count__c</fullName>
    <description>This field shows how many times has the coupon code been used.</description>
    <label>Current Use Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>