force-app/main/default/objects/Coupon__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Determines the kind of usage of the Coupon Code - Multi-use / Single-use.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>