force-app/main/default/objects/Coupon__c/fields/Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percent__c</fullName>
    <description>The percentage of discount that will be waived off on the Application Fee.</description>
    <label>Discount Percent</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>