force-app/main/default/objects/Coupon__c/fields/Effective_From__c.field-meta.xml
<CustomField>
    <fullName>Effective_From__c</fullName>
    <description>The date from which the Coupon Code will be effective and can be used.</description>
    <label>Effective From</label>
    <type>Date</type>
</CustomField>