force-app/main/default/objects/Coupon__c/fields/Effective_To__c.field-meta.xml
<CustomField>
    <fullName>Effective_To__c</fullName>
    <description>The date till which the Coupon code will be effective.</description>
    <label>Effective To</label>
    <type>Date</type>
</CustomField>