force-app/main/default/objects/Coupon__c/fields/Max_Use_Count__c.field-meta.xml
<CustomField>
    <fullName>Max_Use_Count__c</fullName>
    <description>This field holds how many times can the Coupon Code be used.</description>
    <label>Max Use Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>