force-app/main/default/objects/Coupon__c/fields/MultiUse__c.field-meta.xml
<CustomField>
    <fullName>MultiUse__c</fullName>
    <description>This is true if the Coupon Code is either Campaign or Program Specific.</description>
    <formula>IF(OR( Campaign__c  != null,  Program__c != null), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MultiUse</label>
    <type>Checkbox</type>
</CustomField>