force-app/main/default/objects/Coupon__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Program that the Coupon Code is tagged with. This will be set for Multi-use Coupon Code Type.</description>
    <label>Program</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Academic Program</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Coupons</relationshipLabel>
    <relationshipName>Coupons</relationshipName>
    <type>Lookup</type>
</CustomField>