force-app/main/default/objects/Coupon__c/fields/Usable__c.field-meta.xml
<CustomField>
    <fullName>Usable__c</fullName>
    <description>Determines whether the Coupon code is usable anymore or not.</description>
    <formula>IF(AND(TODAY() &gt;=  Effective_From__c , TODAY() &lt;=  Effective_To__c ), true, false) &amp;&amp; ((( Campaign__c !=null  ||  Program__c !=null)  &amp;&amp;  Current_Use_Count__c  &lt;  Max_Use_Count__c  )  || ( Applicant__c !=null  &amp;&amp; Used_on_Application__c  == null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Usable</label>
    <type>Checkbox</type>
</CustomField>