force-app/main/default/objects/Coupon__c/fields/Used_on_Application__c.field-meta.xml
<CustomField>
    <fullName>Used_on_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will be set when an Applicant does the payment against that application using this coupon code.</description>
    <label>Used on Application</label>
    <referenceTo>hed__Application__c</referenceTo>
    <relationshipLabel>Coupons</relationshipLabel>
    <relationshipName>Coupons</relationshipName>
    <type>Lookup</type>
</CustomField>