force-app/main/default/objects/Coupon__c/validationRules/Applicant_do_not_allow_to_reassign.validationRule-meta.xml
<ValidationRule>
    <fullName>Applicant_do_not_allow_to_reassign</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND( ISCHANGED(Applicant__c), NOT(ISBLANK(PRIORVALUE(Applicant__c)))), TRUE, FALSE )</errorConditionFormula>
    <errorDisplayField>Applicant__c</errorDisplayField>
    <errorMessage>Applicant Should not be re-assign</errorMessage>
</ValidationRule>