force-app/main/default/objects/Coupon__c/validationRules/Campaign_Program_or_Applicant_is_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Campaign_Program_or_Applicant_is_allowed</fullName>
    <active>true</active>
    <errorConditionFormula>OR(OR(AND(
NOT(ISBLANK(Applicant__c)),
NOT(ISBLANK(Campaign__c))
), AND(
NOT(ISBLANK(Applicant__c)),
NOT(ISBLANK(Program__c))
)), AND(
NOT(ISBLANK(Campaign__c)),
NOT(ISBLANK(Program__c))
))</errorConditionFormula>
    <errorMessage>Enter at-least Campaign or Program for Multi Use or Applicant for Single Use</errorMessage>
</ValidationRule>