force-app/main/default/objects/Coupon__c/validationRules/Eff_To_Cannot_be_Less_Than_Eff_From_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Eff_To_Cannot_be_Less_Than_Eff_From_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Effective_From__c &gt; Effective_To__c</errorConditionFormula>
    <errorDisplayField>Effective_From__c</errorDisplayField>
    <errorMessage>Effective From Date should not be greater than the Effective To Date</errorMessage>
</ValidationRule>