force-app/main/default/objects/Coupon__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Coupon_Code__c</columns>
    <columns>Campaign__c</columns>
    <columns>Program__c</columns>
    <columns>Applicant__c</columns>
    <columns>Usable__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Discount_Percent__c</columns>
    <columns>Effective_From__c</columns>
    <columns>Effective_To__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>