force-app/main/default/objects/Coupon__c/listViews/Campaigns_and_Program_Specific_Coupons.listView-meta.xml
<ListView>
    <fullName>Campaigns_and_Program_Specific_Coupons</fullName>
    <booleanFilter>(1 OR 2 )AND 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Coupon_Code__c</columns>
    <columns>Campaign__c</columns>
    <columns>Program__c</columns>
    <columns>MultiUse__c</columns>
    <columns>Effective_From__c</columns>
    <columns>Effective_To__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Campaign__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Program__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>MultiUse__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Campaigns and Program Specific Coupons</label>
</ListView>