force-app/main/default/objects/Coupon__c/listViews/Inactive_Coupons.listView-meta.xml
<ListView>
    <fullName>Inactive_Coupons</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Applicant__c</columns>
    <columns>Campaign__c</columns>
    <columns>Program__c</columns>
    <columns>MultiUse__c</columns>
    <columns>Effective_From__c</columns>
    <columns>Effective_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Effective_From__c</field>
        <operation>greaterThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Effective_To__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Inactive Coupons</label>
</ListView>