force-app/main/default/objects/Coupon__c/listViews/Unassigned_Coupons.listView-meta.xml
<ListView>
    <fullName>Unassigned_Coupons</fullName>
    <columns>NAME</columns>
    <columns>Coupon_Code__c</columns>
    <columns>Applicant__c</columns>
    <columns>Usable__c</columns>
    <columns>MultiUse__c</columns>
    <columns>Effective_To__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Applicant__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Usable__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>MultiUse__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Unassigned Coupons</label>
    <sharedTo>
        <role>Counselor</role>
    </sharedTo>
</ListView>