force-app/main/default/objects/Coupon__c/listViews/Used_Coupons.listView-meta.xml
<ListView>
    <fullName>Used_Coupons</fullName>
    <columns>NAME</columns>
    <columns>Coupon_Code__c</columns>
    <columns>Applicant__c</columns>
    <columns>Used_on_Application__c</columns>
    <columns>Effective_From__c</columns>
    <columns>Effective_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Applicant__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Used_on_Application__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Used Coupons</label>
</ListView>